@@ -1,5 +1,10 @@
 2021-12-08  Mark Wielaard  <mark@klomp.org>
 
+	* dwfl_segment_report_module.c (dwfl_segment_report_module): Make sure
+	that ph_buffer_size has room for at least one phdr.
+
+2021-12-08  Mark Wielaard  <mark@klomp.org>
+
 	* dwfl_segment_report_module.c (dwfl_segment_report_module): Make
 	sure the note len increases each iteration.
 
